Version 0.11.0
------------------------------------------------------------------------------
General:
* Added vignettes for various functions.

New functions:
* `grpmean` to compute mean values by groups (One-way Anova).

Version 0.10.3
------------------------------------------------------------------------------
New functions:
* `typical_value()`, to return the typical value of a variable.
* `eta_sq()` and `omega_sq()` to compute (partial) eta-squared or omega-squared statistics for anova tables.
* `anova_stats()` to compute a complete model summary, including (partial) eta-squared and omega-squared statistics for anova tables, returned as tidy data frame.
* `svy_md()` as convenient shortcut to compute the median for variables from survey designs.
* `is_singular()` to check a model fit for singularity in case of post-fitting convergence warnings.

Changes to functions:
* Computation of `r2()` for `glm`-objects is now based on log-Likelihood methods and also accounts for count models.
* Better `print()`-method for `overdisp()`.
* `print()`-method for `svyglm.nb()` now also prints the dispersion parameter Theta.
* `overdisp()` now supports `glmmTMB`-objects.
* `boot_ci()` also displays CI based on sample quantiles.

Bug fixes:
* `std_beta()` did not work for models with only one predictor.

Version 0.10.2
------------------------------------------------------------------------------
Changes to functions:
* `icc()`, `re_var()` and `get_re_var()` now support `glmmTMB`-objects.
* `pred_accuracy()` now also reports the standard error of accuracy, and gets a print-method.

Bug fixes:
* `pred_accuracy()` with cross-validation-method did not correctly account for the generated test data.
* Fixed issue with calculation in `smpsize_lmm()` and `se_ybar()`.

Version 0.10.1
------------------------------------------------------------------------------
General:

* Revised imports: Labelled data functions from package *sjmisc* have been moved to package *sjlabelled*.
