@@ -49,6 +49,10 @@ export(cv_compare)
 export(cv_error)
 export(deff)
 export(eta_sq)
+export(find_beta)
+export(find_beta2)
+export(find_cauchy)
+export(find_normal)
 export(get_model_pval)
 export(get_re_var)
 export(grpmean)
@@ -162,6 +166,7 @@ importFrom(sjmisc,std)
 importFrom(sjmisc,str_contains)
 importFrom(sjmisc,to_value)
 importFrom(stats,anova)
+importFrom(stats,approx)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,chisq.test)
@@ -187,11 +192,13 @@ importFrom(stats,model.response)
 importFrom(stats,na.omit)
 importFrom(stats,na.pass)
 importFrom(stats,nobs)
+importFrom(stats,pbeta)
 importFrom(stats,pchisq)
 importFrom(stats,pnorm)
 importFrom(stats,predict)
 importFrom(stats,predict.glm)
 importFrom(stats,pt)
+importFrom(stats,qcauchy)
 importFrom(stats,qnorm)
 importFrom(stats,qt)
 importFrom(stats,quantile)
