@@ -4,7 +4,9 @@ General:
 * Added vignettes for various functions.
 
 New functions:
-* `grpmean` to compute mean values by groups (One-way Anova).
+* `grpmean()` to compute mean values by groups (One-way Anova).
+* `find_beta()` and `find_beta2()` to find the shape parameters of a Beta distribution.
+* `find_normal()` and `find_cauchy()` to find the parameters of a normal or cauchy distribution.
 
 Version 0.10.3
 ------------------------------------------------------------------------------
